# continuous_rd

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt  doxygen.conf.in
report/: biblio.bib  report.tex
results/skin_dynamics/: parameters.prm
results/validation/decay/: compute_err2_decay.py  decay_parameters.prm
results/validation/diffusion/: compute_err2.py  compute_err2_diffusion.py  diffusion_parameters.prm
src/: CMakeLists.txt  class_parameters.hpp  continuous_rd.cpp  continuous_rd.cu  continuous_rd_device.cu  continuous_rd_device.h  csv_writer.hpp  dat_writer.hpp  definitions.hpp  hex_2d_lattice.hpp  initialization.hpp  logger.hpp  parameters.prm  program_options.hpp  rd_dynamics.hpp
